add header part

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <title>Coffeeroasters</title>
 </head>
 <body>
-    
+    <h1 class="visually-hidden">Coffeeroasters are cool</h1>
+
+    <header class="header">
+        <div class="header__container container df">
+            <img class="header__logo"
+            src="./images/site-logo.svg"
+            alt="LOGO"
+            width="236"
+            height="26"
+            >
+            <nav class="header__nav">
+                <ul class="header__nav__list df">
+                    <li class="header__nav__item"><a class="header__nav__link" href="#">HOME</a></li>
+                    <li class="header__nav__item"><a class="header__nav__link" href="#">ABOUT US</a></li>
+                    <li class="header__nav__item"><a class="header__nav__link" href="#">Create your plan</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
 </body>
 </html>
