--- a/index.html
+++ b/index.html
@@ -29,7 +29,78 @@
         </div>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+        <section class="hero">
+            <div class="wrapper container">
+                <div class="hero__container">
+                    <h2 class="hero__heading">
+                        Great coffee made simple.
+                    </h2>
+                    <p class="hero__text">
+                        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+                    </p>
+                    <a class="hero__link" href="#">
+                        Create your plan
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="our-collection">
+            <div class="our-collection__container container">
+                <ul class="our-collection__list df">
+                    <li class="our-collection__item">
+                        <img 
+                        src="./images/our_collection/Our_collection-1.png" 
+                        alt="pocket"
+                        width="255"
+                        height="193"
+                        >
+                        <h2 class="our-collection__heading">Gran Espresso</h2>
+                        <p class="our-collection__text">
+                            Light and flavorful blend with cocoa and black pepper for an intense experience.
+                        </p>
+                    </li>
+                    <li class="our-collection__item">
+                        <img 
+                        src="./images/our_collection/Our_collection-1.png" 
+                        alt="pocket"
+                        width="255"
+                        height="193"
+                        >
+                        <h2 class="our-collection__heading">Gran Espresso</h2>
+                        <p class="our-collection__text">
+                            Light and flavorful blend with cocoa and black pepper for an intense experience.
+                        </p>
+                    </li>
+                    <li class="our-collection__item">
+                        <img 
+                        src="./images/our_collection/Our_collection-1.png" 
+                        alt="pocket"
+                        width="255"
+                        height="193"
+                        >
+                        <h2 class="our-collection__heading">Gran Espresso</h2>
+                        <p class="our-collection__text">
+                            Light and flavorful blend with cocoa and black pepper for an intense experience.
+                        </p>
+                    </li>
+                    <li class="our-collection__item">
+                        <img 
+                        src="./images/our_collection/Our_collection-1.png" 
+                        alt="pocket"
+                        width="255"
+                        height="193"
+                        >
+                        <h2 class="our-collection__heading">Gran Espresso</h2>
+                        <p class="our-collection__text">
+                            Light and flavorful blend with cocoa and black pepper for an intense experience.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer"></footer>
 </body>
